--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.29.0",
     "react-simple-typewriter": "^5.0.1",
     "react-typewriter-effect": "^1.1.0"
